Fix post list alignment. Flip order of posts to latest at the top.

--- a/src/app/bike-builds/bike-builds.css
+++ b/src/app/bike-builds/bike-builds.css
@@ -1,7 +1,6 @@
 a {
   display: block;
   margin-bottom: 1.5rem;
-  text-align: left;
   text-decoration: none;
 }
 
